Publish: BoB cyclone Marathi article under Science; feature hero; fix slug; rebuild

--- a/public/science/bob-changing-tracks/index.html
+++ b/public/science/bob-changing-tracks/index.html
@@ -76,7 +76,7 @@
 			<a href="https://clustersandclimate.com/">Clusters and Climate</a>
 		</li>
 		<li class="after:content-['❯'] after:ml-4 after:opacity-30 last:after:content-none uppercase">
-			<a href="https://clustersandclimate.com/climate/">Climates</a>
+			<a href="https://clustersandclimate.com/science/">Sciences</a>
 		</li>
 	</ul>
 </div><div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-14">
@@ -132,7 +132,6 @@
 <p>चक्रीवादळ हे केवळ समुद्रावर फिरणारे वारे नाहीत; ते वायुमंडलाच्या अनेक थरांशी संवाद साधत पुढे सरकतात. जमिनीपासून बऱ्याच उंचीवर वाहणारे वारे चक्रीवादळांसाठी मार्गदर्शकासारखे काम करतात. भविष्यात या वरच्या थरातील वाऱ्यांची दिशा आणि ताकद बदलत आहे — आणि हाच बदल चक्रीवादळांना वेगळ्या वाटेने नेत आहे.</p>
 <p>हे वारे चक्रीवादळांना पश्चिमेकडे जाण्यापासून अडवतात आणि त्यांना उत्तरेकडे वळवतात. हा बदल इतका सूक्ष्म आहे की तो उपग्रह नकाशावर लगेच दिसत नाही, पण दशकांच्या पातळीवर तो स्पष्ट होतो. हीच हवामान बदलाची खरी ताकद आहे — तो हळूहळू, पण सातत्याने निसर्गाची दिशा बदलतो.</p>
 <p>अजून धक्कादायक बाब म्हणजे हे बदल स्थानिक नाहीत. युरोप आणि भूमध्य समुद्राच्या आसपास घडणाऱ्या वातावरणीय हालचाली भारताच्या आसपासच्या वाऱ्यांवर परिणाम करतात. पृथ्वीची हवामान व्यवस्था एखाद्या सैल जोडलेल्या यंत्रासारखी नसून घट्ट विणलेल्या जाळ्यासारखी आहे. एका ठिकाणी हललेली दोरी दुसऱ्या टोकाला ताण निर्माण करते.</p>
-<p>याचा अर्थ स्पष्ट आहे — हवामान बदल ही केवळ स्थानिक समस्या नाही. ती जागतिक आहे, आणि तिचे परिणाम सीमारेषा ओलांडून पसरतात.</p>
 <h3 id="बदलत-मरग-महणज-बदलत-जबबदर">बदलते मार्ग म्हणजे बदलती जबाबदारी</h3>
 <p>चक्रीवादळांचे मार्ग बदलत असतील, तर आपली जबाबदारीही बदलली पाहिजे. केवळ जुन्या अनुभवांवर आधारित आपत्ती व्यवस्थापन योजना आता पुरेशा ठरणार नाहीत. कारण भविष्यातील धोके भूतकाळासारखे वागतीलच, याची हमी नाही.</p>
 <p>ओडीसा आणि पश्चिम बंगाल साठी हा बदल विशेष चिंताजनक आहे. दाट लोकसंख्या, नीच भूभाग आणि मर्यादित संसाधने यामुळे चक्रीवादळांचा थोडासा दिशाबदलही तिथे मोठे नुकसान घडवू शकतो. काही भागांमध्ये थेट धडक कमी झाली, तरी पर्जन्यमानाचे स्वरूप, पूर येण्याची वेळ आणि वादळलाटांची दिशा बदलू शकते.</p>
@@ -223,7 +222,7 @@
 
         <h2 class="text-xl md:text-2xl font-bold mb-6 md:mb-8">Recommended for You</h2><div class="grid grid-cols-1 md:grid-cols-2 gap-6"><article class="relative group bg-zinc-100 hover:bg-blue-100 rounded-3xl">
 	
-	<a class="insert-link" href="https://clustersandclimate.com/science/bob-changing-tracks/"></a>
+	<a class="insert-link" href="https://clustersandclimate.com/climate/bob-changing-tracks/"></a>
 
 	<figure class="w-full aspect-video overflow-hidden rounded-3xl"><img class="object-cover group-hover:scale-105 transition duration-500 cursor-pointer" src="https://clustersandclimate.com/images/Sundarban_Rising_Water_hu1de3d3f1b8e00717ee8ee11237f2ae10_868239_750x0_resize_q75_box.jpg" alt="चक्रीवादळे वळत आहेत — आपली धोरणे त्यानुसार वळणार का?" width="750" height="422">
 
