--- a/public/science/bob-changing-tracks/index.html
+++ b/public/science/bob-changing-tracks/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us" dir="ltr">
-<head>
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
   <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -8,11 +8,11 @@
 
 <meta name="description" content="पूर्वी बंगालच्या उपसागरातील बहुतेक चक्रीवादळे भारताच्या दक्षिण-पूर्व किनारपट्टीवरील राज्यांमध्ये धडकत असत. मात्र CMIP6 उच्च रिझोल्यूशन हवामान मॉडेल्सवर आधारित २०१५ ते २०५० या कालावधीतील अंदाज दर्शवतात की चक्रीवादळांच्या मार्गांमध्ये हळूहळू उत्तरेकडे झुकणारा बदल होत आहे. या बदलामुळे चक्रीवादळे आता अधिकाधिक ओडिशा आणि पश्चिम बंगालच्या दिशेने सरकण्याची शक्यता वाढत असल्याचे स्पष्ट होते.">
   <link rel="stylesheet" href="/css/main.css">
-<link rel="icon" type="image/svg+xml" href="https://clustersandclimate.com/favicon.svg"> 
-<link rel="icon" type="image/x-icon" href="https://clustersandclimate.com/favicon.ico"> 
-<link rel="icon" type="image/png" sizes="16x16" href="https://clustersandclimate.com/favicon.png"> 
-<link rel="icon" type="image/png" sizes="32x32" href="https://clustersandclimate.com/favicon-32.png"> 
-<link rel="icon" type="image/png" sizes="64x64" href="https://clustersandclimate.com/favicon-64.png"> 
+<link rel="icon" type="image/svg+xml" href="http://localhost:1313/favicon.svg"> 
+<link rel="icon" type="image/x-icon" href="http://localhost:1313/favicon.ico"> 
+<link rel="icon" type="image/png" sizes="16x16" href="http://localhost:1313/favicon.png"> 
+<link rel="icon" type="image/png" sizes="32x32" href="http://localhost:1313/favicon-32.png"> 
+<link rel="icon" type="image/png" sizes="64x64" href="http://localhost:1313/favicon-64.png"> 
 
 </head>
 <body>
@@ -31,7 +31,7 @@
 				</span>
 			</button>
 			<div class="relative rounded-full py-1.5 px-6 bg-zinc-100 hover:bg-zinc-200 text-xl font-bold uppercase mx-2">
-				<h2><a class="before:content-[''] before:z-10 before:top-0 before:right-0 before:left-0 before:bottom-0 before:absolute before:pointer-events-auto" href="https://clustersandclimate.com/">Clusters and Climate</a></h2>
+				<h2><a class="before:content-[''] before:z-10 before:top-0 before:right-0 before:left-0 before:bottom-0 before:absolute before:pointer-events-auto" href="http://localhost:1313/">Clusters and Climate</a></h2>
 			</div>
 		</div>
 		<div class="flex items-center ml-auto">
@@ -73,10 +73,10 @@
   <main class="max-w-7xl mx-auto px-4 md:px-6 lg:px-8"><div id="breadcrumb" class="max-w-7xl mx-auto py-8">
 	<ul class="flex space-x-4 text-sm text-zinc-500">
 		<li class="after:content-['❯'] after:ml-4 after:opacity-30 last:after:content-none uppercase">
-			<a href="https://clustersandclimate.com/">Clusters and Climate</a>
+			<a href="http://localhost:1313/">Clusters and Climate</a>
 		</li>
 		<li class="after:content-['❯'] after:ml-4 after:opacity-30 last:after:content-none uppercase">
-			<a href="https://clustersandclimate.com/science/">Sciences</a>
+			<a href="http://localhost:1313/science/">Sciences</a>
 		</li>
 	</ul>
 </div><div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-14">
@@ -95,7 +95,7 @@
       
       <div id="writer" class="flex items-center space-x-4">
 
-        <img class="w-12 h-12 bg-black rounded-full" src="https://clustersandclimate.com/images/vivek-2.jpg" alt="Dr. Vivek Shilimkar avatar" width="734" height="734">
+        <img class="w-12 h-12 bg-black rounded-full" src="http://localhost:1313/images/vivek-2.jpg" alt="Dr. Vivek Shilimkar avatar" width="734" height="734">
 
         <ul class="flex items-center space-x-4 flex-nowrap whitespace-nowrap overflow-x-auto">
           
@@ -115,7 +115,7 @@
     </header>
 
     <figure id="featureimage" class="rounded-xl aspect-video">
-            <img class="rounded-lg" src="https://clustersandclimate.com/images/Sundarban_Rising_Water_hu1de3d3f1b8e00717ee8ee11237f2ae10_868239_750x0_resize_q75_box.jpg" alt="" width="750" height="422">
+            <img class="rounded-lg" src="http://localhost:1313/images/Sundarban_Rising_Water_hu1de3d3f1b8e00717ee8ee11237f2ae10_868239_750x0_resize_q75_box.jpg" alt="" width="750" height="422">
 
     </figure>
 
@@ -222,9 +222,9 @@
 
         <h2 class="text-xl md:text-2xl font-bold mb-6 md:mb-8">Recommended for You</h2><div class="grid grid-cols-1 md:grid-cols-2 gap-6"><article class="relative group bg-zinc-100 hover:bg-blue-100 rounded-3xl">
 	
-	<a class="insert-link" href="https://clustersandclimate.com/climate/bob-changing-tracks/"></a>
+	<a class="insert-link" href="http://localhost:1313/climate/bob-changing-tracks/"></a>
 
-	<figure class="w-full aspect-video overflow-hidden rounded-3xl"><img class="object-cover group-hover:scale-105 transition duration-500 cursor-pointer" src="https://clustersandclimate.com/images/Sundarban_Rising_Water_hu1de3d3f1b8e00717ee8ee11237f2ae10_868239_750x0_resize_q75_box.jpg" alt="चक्रीवादळे वळत आहेत — आपली धोरणे त्यानुसार वळणार का?" width="750" height="422">
+	<figure class="w-full aspect-video overflow-hidden rounded-3xl"><img class="object-cover group-hover:scale-105 transition duration-500 cursor-pointer" src="http://localhost:1313/images/Sundarban_Rising_Water_hu1de3d3f1b8e00717ee8ee11237f2ae10_868239_750x0_resize_q75_box.jpg" alt="चक्रीवादळे वळत आहेत — आपली धोरणे त्यानुसार वळणार का?" width="750" height="422">
 
 	  </figure>
 
@@ -239,9 +239,9 @@
 	</div>
 </article><article class="relative group bg-zinc-100 hover:bg-blue-100 rounded-3xl">
 	
-	<a class="insert-link" href="https://clustersandclimate.com/climate/el-nino-la-nina-india-marathi/"></a>
+	<a class="insert-link" href="http://localhost:1313/climate/el-nino-la-nina-india-marathi/"></a>
 
-	<figure class="w-full aspect-video overflow-hidden rounded-3xl"><img class="object-cover group-hover:scale-105 transition duration-500 cursor-pointer" src="https://clustersandclimate.com/images/science/farms_of_India_huf5a46bf31d0ea4457263106243c764bb_7488358_750x0_resize_q75_box.jpg" alt="एल निनो – ला निनाचा भारतीय हवामानावर परिणाम: बातम्यांपलीकडचे सत्य" width="750" height="424">
+	<figure class="w-full aspect-video overflow-hidden rounded-3xl"><img class="object-cover group-hover:scale-105 transition duration-500 cursor-pointer" src="http://localhost:1313/images/science/farms_of_India_huf5a46bf31d0ea4457263106243c764bb_7488358_750x0_resize_q75_box.jpg" alt="एल निनो – ला निनाचा भारतीय हवामानावर परिणाम: बातम्यांपलीकडचे सत्य" width="750" height="424">
 
 	  </figure>
 
@@ -271,24 +271,24 @@
 			<h2 class="font-bold text-xl mb-8">Recent Post</h2>
 
 			<article class="relative group flex flex-row">
-	<a class="insert-link" href="https://clustersandclimate.com/climate/river-in-the-ocean/"></a>
-	<figure class="basis-1/3 aspect-square overflow-hidden rounded-2xl bg-zinc-100"><img class="object-cover h-full w-full group-hover:scale-105 transition duration-500 cursor-pointer" src="https://clustersandclimate.com/images/article-2/ITF_INSTANT_Sprintall2009_hu9fd345bb23d166d94d0b2c8d2d5f44b3_148445_250x250_crop_box_center_3.png" alt="Indonesian Throughflow: River in the ocean that affects Indian Monsoon rainfall" width="250" height="250">
+	<a class="insert-link" href="http://localhost:1313/climate/river-in-the-ocean/"></a>
+	<figure class="basis-1/3 aspect-square overflow-hidden rounded-2xl bg-zinc-100"><img class="object-cover h-full w-full group-hover:scale-105 transition duration-500 cursor-pointer" src="http://localhost:1313/images/article-2/ITF_INSTANT_Sprintall2009_hu9fd345bb23d166d94d0b2c8d2d5f44b3_148445_250x250_crop_box_center_3.png" alt="Indonesian Throughflow: River in the ocean that affects Indian Monsoon rainfall" width="250" height="250">
 
 	</figure>
 	<div class="basis-2/3 self-center ml-4">
 		<h3 class="font-bold group-hover:underline decoration-auto">Indonesian Throughflow: River in the ocean that affects Indian Monsoon rainfall</h3>
 	</div>
 </article><article class="relative group flex flex-row">
-	<a class="insert-link" href="https://clustersandclimate.com/climate/%E0%A4%AE%E0%A4%B9%E0%A4%BE%E0%A4%B8%E0%A4%BE%E0%A4%97%E0%A4%B0%E0%A5%80%E0%A4%AF-%E0%A4%AA%E0%A5%8D%E0%A4%B0%E0%A4%B5%E0%A4%BE%E0%A4%B9%E0%A4%BE%E0%A4%BE%E0%A4%82%E0%A4%9A%E0%A4%BE-%E0%A4%AA%E0%A4%B0%E0%A4%BF%E0%A4%9A%E0%A4%AF-%E0%A4%AD%E0%A4%BE%E0%A4%97%E0%A5%A7/"></a>
-	<figure class="basis-1/3 aspect-square overflow-hidden rounded-2xl bg-zinc-100"><img class="object-cover h-full w-full group-hover:scale-105 transition duration-500 cursor-pointer" src="https://clustersandclimate.com/images/article-1/ocean-current_hu53cd2285913a449477dd2e165de70fed_9808534_250x250_crop_box_center_3.png" alt="महासागरीय प्रवाहाांचा परिचय भाग – १" width="250" height="250">
+	<a class="insert-link" href="http://localhost:1313/climate/%E0%A4%AE%E0%A4%B9%E0%A4%BE%E0%A4%B8%E0%A4%BE%E0%A4%97%E0%A4%B0%E0%A5%80%E0%A4%AF-%E0%A4%AA%E0%A5%8D%E0%A4%B0%E0%A4%B5%E0%A4%BE%E0%A4%B9%E0%A4%BE%E0%A4%BE%E0%A4%82%E0%A4%9A%E0%A4%BE-%E0%A4%AA%E0%A4%B0%E0%A4%BF%E0%A4%9A%E0%A4%AF-%E0%A4%AD%E0%A4%BE%E0%A4%97%E0%A5%A7/"></a>
+	<figure class="basis-1/3 aspect-square overflow-hidden rounded-2xl bg-zinc-100"><img class="object-cover h-full w-full group-hover:scale-105 transition duration-500 cursor-pointer" src="http://localhost:1313/images/article-1/ocean-current_hu53cd2285913a449477dd2e165de70fed_9808534_250x250_crop_box_center_3.png" alt="महासागरीय प्रवाहाांचा परिचय भाग – १" width="250" height="250">
 
 	</figure>
 	<div class="basis-2/3 self-center ml-4">
 		<h3 class="font-bold group-hover:underline decoration-auto">महासागरीय प्रवाहाांचा परिचय भाग – १</h3>
 	</div>
 </article><article class="relative group flex flex-row">
-	<a class="insert-link" href="https://clustersandclimate.com/science/the-great-conjunction/"></a>
-	<figure class="basis-1/3 aspect-square overflow-hidden rounded-2xl bg-zinc-100"><img class="object-cover h-full w-full group-hover:scale-105 transition duration-500 cursor-pointer" src="https://clustersandclimate.com/images/science/Jupiter-Saturn-Conjunction_hu45acb605ddc9c11e12b96b81243b8ddb_24615_250x250_crop_q75_box_center.jpg" alt="Saturn and Jupiter&#39;s Great Conjunction: A Once-in-a-Lifetime Event?" width="250" height="250">
+	<a class="insert-link" href="http://localhost:1313/science/the-great-conjunction/"></a>
+	<figure class="basis-1/3 aspect-square overflow-hidden rounded-2xl bg-zinc-100"><img class="object-cover h-full w-full group-hover:scale-105 transition duration-500 cursor-pointer" src="http://localhost:1313/images/science/Jupiter-Saturn-Conjunction_hu45acb605ddc9c11e12b96b81243b8ddb_24615_250x250_crop_q75_box_center.jpg" alt="Saturn and Jupiter&#39;s Great Conjunction: A Once-in-a-Lifetime Event?" width="250" height="250">
 
 	</figure>
 	<div class="basis-2/3 self-center ml-4">
@@ -308,7 +308,7 @@
 
     <div class="w-full md:w-3/5 flex flex-col space-y-4 md:pr-8 lg:pr-10">
 
-      <a class="flex items-center group" href="https://clustersandclimate.com/">
+      <a class="flex items-center group" href="http://localhost:1313/">
         <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="mr-2 group-hover:animate-spin" viewBox="0 0 16 16">
           <path d="M8 11a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
           <path d="M13.997 5.17a5 5 0 0 0-8.101-4.09A5 5 0 0 0 1.28 9.342a5 5 0 0 0 8.336 5.109 3.5 3.5 0 0 0 5.201-4.065 3.001 3.001 0 0 0-.822-5.216zm-1-.034a1 1 0 0 0 .668.977 2.001 2.001 0 0 1 .547 3.478 1 1 0 0 0-.341 1.113 2.5 2.5 0 0 1-3.715 2.905 1 1 0 0 0-1.262.152 4 4 0 0 1-6.67-4.087 1 1 0 0 0-.2-1 4 4 0 0 1 3.693-6.61 1 1 0 0 0 .8-.2 4 4 0 0 1 6.48 3.273z"/>
