Content: Expand CMIP6 Marathi article with narrative and glossary

--- a/climate/bob-changing-tracks/index.html
+++ b/climate/bob-changing-tracks/index.html
@@ -141,7 +141,7 @@
 
     <div id="content" class="mb-14">
       <h2 id="चकरवदळ-वळत-आहत--आपल-धरण-तयनसर-वळणर-क">चक्रीवादळे वळत आहेत — आपली धोरणे त्यानुसार वळणार का?</h2>
-<h3 id="हवमन-बदलकड-पहणयच-आपल-सवयच-चकच-आह">हवामान बदलाकडे पाहण्याची आपली सवयच चुकीची आहे</h3>
+<h3 id="हवमन-बदलकड-पहणयच-आपल-सवय">हवामान बदलाकडे पाहण्याची आपली सवय</h3>
 <p>हवामान बदलाबद्दल बोलताना आपण नेहमी आकड्यांच्या मागे धावतो. तापमान किती वाढले, पर्जन्यमान किती बदलले, चक्रीवादळांची संख्या वाढली की घटली — चर्चा याच चौकटीत अडकून राहते. ही चौकट सोयीची आहे, कारण ती मोजता येते, मांडता येते आणि शीर्षकात बसवता येते. पण हीच चौकट आपल्याला एक महत्त्वाचा बदल दिसू देत नाही.</p>
 <p>चक्रीवादळांचा प्रश्न फक्त “किती येतील” हा नसतो. तो “कुठे जातील” हा असतो. आणि हा दुसरा प्रश्न हवामान बदलाच्या चर्चेत अजूनही दुय्यम ठरतो आहे.</p>
 <p>बंगालचा उपसागर याचे ठळक उदाहरण आहे. दशकानुदशके या उपसागरातील चक्रीवादळांनी भारताच्या पूर्व किनाऱ्यावर धडक दिली. त्यामुळे आपली मानसिकता, आपत्ती व्यवस्थापनाची रचना आणि धोरणात्मक तयारी याच गृहितकावर उभी राहिली. पण आता चित्र हळूहळू बदलत आहे. भविष्यातील हवामान अंदाज असे सूचित करतात की अधिक चक्रीवादळे पश्चिमेकडे न जाता उत्तर-ईशान्य दिशेने वळत आहेत.</p>
