Deploy: sync public to root to publish latest changes (BoB link to CMIP6)

--- a/science/cmip6-marathi/index.html
+++ b/science/cmip6-marathi/index.html
@@ -6,7 +6,7 @@
 
 <title>CMIP6 म्हणजे काय? इतिहास आणि CMIP5ची माहिती | Clusters and Climate</title>
 
-<meta name="description" content="सामान्य वाचकांसाठी: CMIP म्हणजे हवामान मॉडेल्सची सामूहिक चाचणी योजना. CMIP6चा इतिहास, उद्दिष्टे आणि CMIP5ची माहिती सोप्या भाषेत.">
+<meta name="description" content="CMIP (Coupled Model Intercomparison Project) ही जगभरातील हवामान मॉडेल्सची सामूहिक चाचणी योजना आहे, ज्यातून वेगवेगळ्या मॉडेल्सचे निष्कर्ष तुलना करून हवामान बदल समजून घेतला जातो. CMIP5 मॉडेल्समुळे तापमानवाढ, पाऊस आणि समुद्रपातळी बदल यांचे महत्त्वाचे अंदाज मिळाले, त्यापुढील टप्पा असलेली CMIP6 योजना अधिक सूक्ष्म, अचूक आणि प्रदेशनिहाय हवामान बदलांचे अंदाज देते.">
   <link rel="stylesheet" href="/css/main.css">
 <link rel="icon" type="image/svg+xml" href="https://clustersandclimate.com/favicon.svg"> 
 <link rel="icon" type="image/x-icon" href="https://clustersandclimate.com/favicon.ico"> 
@@ -109,7 +109,7 @@
 
       <div id="lead" class="my-6">
 
-        <p class="font-bold">सामान्य वाचकांसाठी: CMIP म्हणजे हवामान मॉडेल्सची सामूहिक चाचणी योजना. CMIP6चा इतिहास, उद्दिष्टे आणि CMIP5ची माहिती सोप्या भाषेत. </p>
+        <p class="font-bold">CMIP (Coupled Model Intercomparison Project) ही जगभरातील हवामान मॉडेल्सची सामूहिक चाचणी योजना आहे, ज्यातून वेगवेगळ्या मॉडेल्सचे निष्कर्ष तुलना करून हवामान बदल समजून घेतला जातो. CMIP5 मॉडेल्समुळे तापमानवाढ, पाऊस आणि समुद्रपातळी बदल यांचे महत्त्वाचे अंदाज मिळाले, त्यापुढील टप्पा असलेली CMIP6 योजना अधिक सूक्ष्म, अचूक आणि प्रदेशनिहाय हवामान बदलांचे अंदाज देते. </p>
 
       </div>
       
@@ -135,7 +135,7 @@
     </header>
 
     <figure id="featureimage" class="rounded-xl aspect-video">
-            <img class="rounded-lg" src="https://clustersandclimate.com/images/cmip6_hu616a58950d425e0a661039ea939b8371_50742_750x0_resize_q75_box.jpeg" alt="" width="750" height="513">
+            <img class="rounded-lg" src="https://clustersandclimate.com/images/cmip6_hu90afb6ea417449c5fd9f8477847e3d02_51580_750x0_resize_q75_box.jpeg" alt="" width="750" height="360">
 
     </figure>
 
@@ -164,8 +164,6 @@
 <p>भारतातील मान्सून पर्जन्यमान, उष्णतेच्या लाटा आणि किनारपट्टीवरील जोखमी यांसाठी CMIP6 डेटा उपयुक्त ठरतो. अनेक मॉडेल्स SSP2-4.5 आणि SSP5-8.5 दृश्यांत उष्णता वाढल्यास पर्जन्यमानाच्या पॅटर्नमध्ये बदल दाखवतात — काही प्रदेशांत तीव्र पावसाच्या घटनांची वारंवारता वाढू शकते, तर इतरत्र पर्जन्यमानाची अस्थिरता वाढू शकते. उष्णतेच्या लाटा दीर्घ आणि वारंवार होण्याची शक्यता अनेक मॉडेल्स दर्शवतात. समुद्रस्तरातील वाढ किनारपट्टीवरील पूर/खारफुटी ताण वाढवू शकते.</p>
 <h2 id="अधक-महत-हव-असलयस-कय-पहव">अधिक माहिती हवी असल्यास काय पाहावे?</h2>
 <p>ScenarioMIP चे दस्तऐवज SSP दृश्यांचे तांत्रिक तपशील देतात. CMIP data request/variable list मधून कोणते व्हेरिएबल्स उपलब्ध आहेत हे पाहता येते (उदा. <code>tas</code>, <code>pr</code>, <code>psl</code>, <code>uas</code>, <code>vas</code>, <code>sfcWind</code>, <code>seaIce</code> इ.). स्थानिक स्तरावरील तपशीलांसाठी CORDEX सारखी डाउनस्केलिंग संसाधने उपयुक्त ठरतात.</p>
-<h2 id="सकषप-abbreviations-सपषटकरण">संक्षेप (Abbreviations) स्पष्टीकरण</h2>
-<p>CMIP — Coupled Model Intercomparison Project: मॉडेल्सची तुलना/सामायिक प्रयोग योजना. WCRP — World Climate Research Programme: जागतिक हवामान संशोधन कार्यक्रम. WGCM — Working Group on Coupled Modelling: CMIP समन्वय करणारा गट. IPCC — Intergovernmental Panel on Climate Change: हवामान बदलावर वैज्ञानिक मूल्यांकन करणारी जागतिक संस्था. AR4/AR5/AR6 — IPCC चे चौथे/पाचवे/सहावे मूल्यांकन अहवाल. GCM — General Circulation Model: पृथ्वीच्या वातावरण/महासागरांच्या मोठ्या प्रमाणातील प्रवाहांचे मॉडेल. ESM — Earth System Model: GCM + कार्बन चक्र/जैव-रसायनशास्त्र समाविष्ट. RCP — Representative Concentration Pathway: हरितगृह वायू एकाग्रतेच्या मार्गांचे दृश्य (CMIP5). SSP — Shared Socioeconomic Pathway: सामाजिक-आर्थिक मार्ग + उत्सर्जन दृश्ये (CMIP6). MIP — Model Intercomparison Project: CMIP6 मधील उप-प्रकल्प (उदा. ScenarioMIP, HighResMIP). ESGF — Earth System Grid Federation: CMIP डेटा वितरीत करणारे नेटवर्क/पोर्टल्स. NetCDF — Network Common Data Form: वैज्ञानिक डेटा साठवण्यासाठी फाइल स्वरूप. CF conventions — Climate and Forecast conventions: NetCDF फाइल्ससाठी मानक मेटाडेटा/नामकरण नियम. Hindcast — भूतकाळाची पुनर्रचना: मॉडेल भूतकालीन इनपुट्सने चालवून सत्यापन. Projection — भविष्यातील अंदाज: दृश्यांवर आधारित भविष्याचे मॉडेल रन. Forcing — बाह्य घटक/इनपुट्स: उत्सर्जन, सौर विकिरण, एरोसोल्स इत्यादी. Ensemble — मॉडेलचे अनेक रन: आंतरिक बदलशीलता व अनिश्चितता मोजण्यासाठी.</p>
 <h2 id="cmip-मरयद">CMIP मर्यादा</h2>
 <ul>
 <li><strong>मॉडेल = वास्तव नाही</strong>: मॉडेल्स जटिल प्रक्रियांचा साधारीकरण करतात; त्यामुळे अनिश्चितता असते.</li>
@@ -180,6 +178,25 @@
 </ul>
 <h2 id="नषकरष">निष्कर्ष</h2>
 <p>CMIP ही जगभरातील हवामान मॉडेल्सना एकत्र आणून समान प्रयोग चालवण्याची योजना आहे. CMIP5 ने RCP दृश्ये आणली; CMIP6 मध्ये SSP दृश्ये आणि अधिक समृद्ध उप-प्रकल्प आले. हे अंदाज वास्तवाचे अचूक भविष्य नाहीत; पण धोके ओळखणे, प्रवृत्ती समजून घेणे आणि निर्णय घेण्यासाठी अतिशय उपयुक्त मार्गदर्शन देतात.</p>
+<h2 id="सकषप-abbreviations-सपषटकरण">संक्षेप (Abbreviations) स्पष्टीकरण</h2>
+<ul>
+<li>CMIP — Coupled Model Intercomparison Project: मॉडेल्सची तुलना/सामायिक प्रयोग योजना.</li>
+<li>WCRP — World Climate Research Programme: जागतिक हवामान संशोधन कार्यक्रम.</li>
+<li>WGCM — Working Group on Coupled Modelling: CMIP समन्वय करणारा गट.</li>
+<li>IPCC — Intergovernmental Panel on Climate Change: हवामान बदलावर वैज्ञानिक मूल्यांकन करणारी जागतिक संस्था.</li>
+<li>AR4/AR5/AR6 — IPCC चे चौथे/पाचवे/सहावे मूल्यांकन अहवाल.</li>
+<li>GCM — General Circulation Model: पृथ्वीच्या वातावरण/महासागरांच्या मोठ्या प्रमाणातील प्रवाहांचे मॉडेल.</li>
+<li>ESM — Earth System Model: GCM + कार्बन चक्र/जैव-रसायनशास्त्र समाविष्ट. RCP — Representative Concentration Pathway: हरितगृह वायू एकाग्रतेच्या मार्गांचे दृश्य (CMIP5).</li>
+<li>SSP — Shared Socioeconomic Pathway: सामाजिक-आर्थिक मार्ग + उत्सर्जन दृश्ये (CMIP6).</li>
+<li>MIP — Model Intercomparison Project: CMIP6 मधील उप-प्रकल्प (उदा. ScenarioMIP, HighResMIP).</li>
+<li>ESGF — Earth System Grid Federation: CMIP डेटा वितरीत करणारे नेटवर्क/पोर्टल्स.</li>
+<li>NetCDF — Network Common Data Form: वैज्ञानिक डेटा साठवण्यासाठी फाइल स्वरूप.</li>
+<li>CF conventions — Climate and Forecast conventions: NetCDF फाइल्ससाठी मानक मेटाडेटा/नामकरण नियम.</li>
+<li>Hindcast — भूतकाळाची पुनर्रचना: मॉडेल भूतकालीन इनपुट्सने चालवून सत्यापन.</li>
+<li>Projection — भविष्यातील अंदाज: दृश्यांवर आधारित भविष्याचे मॉडेल रन.</li>
+<li>Forcing — बाह्य घटक/इनपुट्स: उत्सर्जन, सौर विकिरण, एरोसोल्स इत्यादी.</li>
+<li>Ensemble — मॉडेलचे अनेक रन: आंतरिक बदलशीलता व अनिश्चितता मोजण्यासाठी.</li>
+</ul>
 
 
     <ul id="taxonomy" class="not-prose flex items-center space-x-4 flex-nowrap whitespace-nowrap overflow-x-auto">
