--- a/science/index.html
+++ b/science/index.html
@@ -108,7 +108,7 @@
 	
 	<a class="insert-link" href="https://clustersandclimate.com/science/cmip6-marathi/"></a>
 
-	<figure class="w-full aspect-video overflow-hidden rounded-3xl"><img class="object-cover group-hover:scale-105 transition duration-500 cursor-pointer" src="https://clustersandclimate.com/images/cmip6_hu616a58950d425e0a661039ea939b8371_50742_750x0_resize_q75_box.jpeg" alt="CMIP6 म्हणजे काय? इतिहास आणि CMIP5ची माहिती" width="750" height="513">
+	<figure class="w-full aspect-video overflow-hidden rounded-3xl"><img class="object-cover group-hover:scale-105 transition duration-500 cursor-pointer" src="https://clustersandclimate.com/images/cmip6_hu90afb6ea417449c5fd9f8477847e3d02_51580_750x0_resize_q75_box.jpeg" alt="CMIP6 म्हणजे काय? इतिहास आणि CMIP5ची माहिती" width="750" height="360">
 
 	  </figure>
 
@@ -118,7 +118,7 @@
 
 		<h3 class="my-4 text-2xl font-bold">CMIP6 म्हणजे काय? इतिहास आणि CMIP5ची माहिती</h3>
 
-		<p class="text-normal leading-normal text-zinc-500 line-clamp-2">सामान्य वाचकांसाठी: CMIP म्हणजे हवामान मॉडेल्सची सामूहिक चाचणी योजना. CMIP6चा इतिहास, उद्दिष्टे आणि CMIP5ची माहिती सोप्या भाषेत.</p>
+		<p class="text-normal leading-normal text-zinc-500 line-clamp-2">CMIP (Coupled Model Intercomparison Project) ही जगभरातील हवामान मॉडेल्सची सामूहिक चाचणी योजना आहे, ज्यातून वेगवेगळ्या मॉडेल्सचे निष्कर्ष तुलना करून हवामान बदल समजून घेतला जातो. CMIP5 मॉडेल्समुळे तापमानवाढ, पाऊस आणि समुद्रपातळी बदल यांचे महत्त्वाचे अंदाज मिळाले, त्यापुढील टप्पा असलेली CMIP6 योजना अधिक सूक्ष्म, अचूक आणि प्रदेशनिहाय हवामान बदलांचे अंदाज देते.</p>
 
 	</div>
 </article><article class="relative group bg-zinc-100 hover:bg-blue-100 rounded-3xl">
