--- a/climate/index.html
+++ b/climate/index.html
@@ -114,7 +114,7 @@
 	
 	<a class="insert-link" href="https://clustersandclimate.com/climate/bob-changing-tracks/"></a>
 
-	<figure class="w-full aspect-video overflow-hidden rounded-3xl">
+	<figure class="w-full aspect-video overflow-hidden rounded-3xl"><img class="object-cover group-hover:scale-105 transition duration-500 cursor-pointer" src="https://clustersandclimate.com/images/Sundarban_Rising_Water_hu1de3d3f1b8e00717ee8ee11237f2ae10_868239_750x0_resize_q75_box.jpg" alt="चक्रीवादळे वळत आहेत — आपली धोरणे त्यानुसार वळणार का?" width="750" height="422">
 
 	  </figure>
 
