--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
 
 <section class="block md:flex relative group p-6 lg:p-10 space-y-6 md:space-x-6 my-14 bg-zinc-100 rounded-3xl hover:bg-blue-100">
   <figure class="basis-1/2 w-full aspect-video overflow-hidden rounded-2xl border">
+          <img class="object-cover group-hover:scale-105 transition duration-500 cursor-pointer" src="https://clustersandclimate.com/images/Sundarban_Rising_Water_hu1de3d3f1b8e00717ee8ee11237f2ae10_868239_720x0_resize_q85_box.jpg" alt="Clusters and Climate" width="720" height="405">
 
   </figure>
   <div class="basis-1/2 self-center">
@@ -156,7 +157,7 @@
 	
 	<a class="insert-link" href="https://clustersandclimate.com/climate/bob-changing-tracks/"></a>
 
-	<figure class="w-full aspect-video overflow-hidden rounded-3xl">
+	<figure class="w-full aspect-video overflow-hidden rounded-3xl"><img class="object-cover group-hover:scale-105 transition duration-500 cursor-pointer" src="https://clustersandclimate.com/images/Sundarban_Rising_Water_hu1de3d3f1b8e00717ee8ee11237f2ae10_868239_750x0_resize_q75_box.jpg" alt="चक्रीवादळे वळत आहेत — आपली धोरणे त्यानुसार वळणार का?" width="750" height="422">
 
 	  </figure>
 
