Deploy: Update site

--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
 
 <section class="block md:flex relative group p-6 lg:p-10 space-y-6 md:space-x-6 my-14 bg-zinc-100 rounded-3xl hover:bg-blue-100">
   <figure class="basis-1/2 w-full aspect-video overflow-hidden rounded-2xl border">
+          <img class="object-cover group-hover:scale-105 transition duration-500 cursor-pointer" src="https://clustersandclimate.com/images/tech/heading_hua6ed82ba9d5a2551ca881fd6d0e1f093_2530047_720x0_resize_q85_box_3.png" alt="Clusters and Climate" width="720" height="480">
 
   </figure>
   <div class="basis-1/2 self-center">
@@ -141,7 +142,7 @@
 	
 	<a class="insert-link" href="https://clustersandclimate.com/technology/from-climate-science-to-virtual-cloud-systems/"></a>
 
-	<figure class="w-full aspect-video overflow-hidden rounded-3xl">
+	<figure class="w-full aspect-video overflow-hidden rounded-3xl"><img class="object-cover group-hover:scale-105 transition duration-500 cursor-pointer" src="https://clustersandclimate.com/images/tech/heading_hua6ed82ba9d5a2551ca881fd6d0e1f093_2530047_750x0_resize_box_3.png" alt="From Climate Science to Virtual Cloud Systems : Designing Green Cloud Systems" width="750" height="500">
 
 	  </figure>
 
