--- a/technology/index.html
+++ b/technology/index.html
@@ -115,7 +115,7 @@
 	
 	<a class="insert-link" href="https://clustersandclimate.com/technology/from-climate-science-to-virtual-cloud-systems/"></a>
 
-	<figure class="w-full aspect-video overflow-hidden rounded-3xl">
+	<figure class="w-full aspect-video overflow-hidden rounded-3xl"><img class="object-cover group-hover:scale-105 transition duration-500 cursor-pointer" src="https://clustersandclimate.com/images/tech/heading_hua6ed82ba9d5a2551ca881fd6d0e1f093_2530047_750x0_resize_box_3.png" alt="From Climate Science to Virtual Cloud Systems : Designing Green Cloud Systems" width="750" height="500">
 
 	  </figure>
 
