quiet always on dev-test clusters

--- a/technology/cost-aware-cloud-architectures-on-a-budget/index.html
+++ b/technology/cost-aware-cloud-architectures-on-a-budget/index.html
@@ -358,11 +358,11 @@
     <ul id="taxonomy" class="not-prose flex items-center space-x-4 flex-nowrap whitespace-nowrap overflow-x-auto">
 
       <li class="font-semibold my-4">Tags:</li>
-        <li><a class="py-2 px-6 border rounded-full hover:bg-zinc-100 active:bg-zinc-300" href="/tags/Cloud/" style="font-family: 'Noto Sans', 'Noto Sans Devanagari', system-ui, -apple-system, sans-serif;">Cloud</a></li>
-        <li><a class="py-2 px-6 border rounded-full hover:bg-zinc-100 active:bg-zinc-300" href="/tags/Cost/" style="font-family: 'Noto Sans', 'Noto Sans Devanagari', system-ui, -apple-system, sans-serif;">Cost</a></li>
-        <li><a class="py-2 px-6 border rounded-full hover:bg-zinc-100 active:bg-zinc-300" href="/tags/Infrastructure/" style="font-family: 'Noto Sans', 'Noto Sans Devanagari', system-ui, -apple-system, sans-serif;">Infrastructure</a></li>
-        <li><a class="py-2 px-6 border rounded-full hover:bg-zinc-100 active:bg-zinc-300" href="/tags/Terraform/" style="font-family: 'Noto Sans', 'Noto Sans Devanagari', system-ui, -apple-system, sans-serif;">Terraform</a></li>
-        <li><a class="py-2 px-6 border rounded-full hover:bg-zinc-100 active:bg-zinc-300" href="/tags/Serverless/" style="font-family: 'Noto Sans', 'Noto Sans Devanagari', system-ui, -apple-system, sans-serif;">Serverless</a></li>
+        <li><a class="py-2 px-6 border rounded-full hover:bg-zinc-100 active:bg-zinc-300" href="/tags/Cloud/" lang="mr" style="font-family: 'Noto Sans Devanagari', 'Noto Sans', system-ui, sans-serif; unicode-bidi: isolate;">Cloud</a></li>
+        <li><a class="py-2 px-6 border rounded-full hover:bg-zinc-100 active:bg-zinc-300" href="/tags/Cost/" lang="mr" style="font-family: 'Noto Sans Devanagari', 'Noto Sans', system-ui, sans-serif; unicode-bidi: isolate;">Cost</a></li>
+        <li><a class="py-2 px-6 border rounded-full hover:bg-zinc-100 active:bg-zinc-300" href="/tags/Infrastructure/" lang="mr" style="font-family: 'Noto Sans Devanagari', 'Noto Sans', system-ui, sans-serif; unicode-bidi: isolate;">Infrastructure</a></li>
+        <li><a class="py-2 px-6 border rounded-full hover:bg-zinc-100 active:bg-zinc-300" href="/tags/Terraform/" lang="mr" style="font-family: 'Noto Sans Devanagari', 'Noto Sans', system-ui, sans-serif; unicode-bidi: isolate;">Terraform</a></li>
+        <li><a class="py-2 px-6 border rounded-full hover:bg-zinc-100 active:bg-zinc-300" href="/tags/Serverless/" lang="mr" style="font-family: 'Noto Sans Devanagari', 'Noto Sans', system-ui, sans-serif; unicode-bidi: isolate;">Serverless</a></li>
     </ul>
 </div>
 
