--- a/technology/quiet-always-on-dev-test-clusters-energy/index.html
+++ b/technology/quiet-always-on-dev-test-clusters-energy/index.html
@@ -41,9 +41,10 @@
 <meta property="og:title" content="Quiet, Always-On: How Development and Test Clusters Accumulate Energy Use">
 <meta property="og:description" content="Development and test environments often run 24/7 despite being used only during business hours. This article explores the hidden energy costs of always-on infrastructure and practical strategies to reduce the carbon footprint of non-production workloads.">
 <meta property="og:url" content="https://clustersandclimate.com/technology/quiet-always-on-dev-test-clusters-energy/">
-<meta property="og:site_name" content="Clusters and Climate"><meta property="og:image" content="https://clustersandclimate.com/images/tech/quiet-home.png"><meta property="og:image:alt" content="Quiet, Always-On: How Development and Test Clusters Accumulate Energy Use"><meta name="twitter:card" content="summary">
+<meta property="og:site_name" content="Clusters and Climate"><meta property="og:image" content="https://clustersandclimate.com/images/tech/quiet-home_hu1d95eb0735e3d3f4768a799a2c78c84e_1547560_1200x0_resize_box_3.png"><meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="796"><meta property="og:image:alt" content="Quiet, Always-On: How Development and Test Clusters Accumulate Energy Use"><meta name="twitter:card" content="summary">
 <meta name="twitter:title" content="Quiet, Always-On: How Development and Test Clusters Accumulate Energy Use">
-<meta name="twitter:description" content="Development and test environments often run 24/7 despite being used only during business hours. This article explores the hidden energy costs of always-on infrastructure and practical strategies to …"><meta name="twitter:image" content="https://clustersandclimate.com/images/tech/quiet-home.png"><meta name="twitter:image:alt" content="Quiet, Always-On: How Development and Test Clusters Accumulate Energy Use"><meta name="twitter:site" content="https://x.com/DrViKiShi">
+<meta name="twitter:description" content="Development and test environments often run 24/7 despite being used only during business hours. This article explores the hidden energy costs of always-on infrastructure and practical strategies to …"><meta name="twitter:image" content="https://clustersandclimate.com/images/tech/quiet-home_hu1d95eb0735e3d3f4768a799a2c78c84e_1547560_1200x0_resize_box_3.png"><meta name="twitter:image:alt" content="Quiet, Always-On: How Development and Test Clusters Accumulate Energy Use"><meta name="twitter:site" content="https://x.com/DrViKiShi">
 </head>
 <body>
   <header class="py-6 border-b"><div class="max-w-7xl mx-auto px-4 md:px-6 lg:px-8 flex flex-col">
@@ -156,6 +157,7 @@
     </header>
 
     <figure id="featureimage" class="rounded-xl aspect-video">
+            <img class="rounded-lg" src="https://clustersandclimate.com/images/tech/quiet-home_hu1d95eb0735e3d3f4768a799a2c78c84e_1547560_750x0_resize_box_3.png" alt="" width="750" height="498">
 
     </figure>
 
