add source for number

--- a/technology/quiet-always-on-dev-test-clusters-energy/index.html
+++ b/technology/quiet-always-on-dev-test-clusters-energy/index.html
@@ -181,6 +181,7 @@ These non-production clusters are quiet and that makes them easy to miss in term
 <li>3 test environments with similar configurations</li>
 <li>2 staging environments</li>
 </ul>
+<p>Source for the numbers: <a href="https://www.cncf.io/reports/cncf-annual-survey-2022/">https://www.cncf.io/reports/cncf-annual-survey-2022/</a></p>
 <p>Each virtual node draws roughly 50-100W on average. Running continuously:</p>
 <ul>
 <li>Daily energy per environment: ~6-12 kWh</li>
